--- a/hotelservice/Dockerfile
+++ b/hotelservice/Dockerfile
@@ -9,6 +9,9 @@ COPY ./airlineservice/pom.xml /VacationApp/airlineservice/
 COPY ./hotelservice/src /VacationApp/hotelservice/src
 COPY ./hotelservice/pom.xml /VacationApp/hotelservice/
 
+COPY ./loggingservice/src /VacationApp/loggingservice/src
+COPY ./loggingservice/pom.xml /VacationApp/loggingservice/
+
 COPY ./client/src /VacationApp/client/src
 COPY ./client/pom.xml /VacationApp/client/
 
