--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>hotelservice</module>
         <module>carservice</module>
         <module>client</module>
+        <module>loggingservice</module>
     </modules>
 
     <name>VacationApp</name>
@@ -40,6 +41,18 @@
         </dependencies>
     </dependencyManagement>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+    </dependencies>
     <build>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
